# rannasta-suomeen-opencv

./: Cargo.toml  README.md  build.rs
src/: lib.rs  tests.rs
utils/: compile.sh  test.sh
