[package]
name = "practice"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Henrie <nate@n8henrie.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/n8henrie/rust-ffi-practice"
homepage = "https://n8henrie.com/2021/11/the-simplest-rust-c-ffi-example/"
description = "https://n8henrie.com/2021/11/the-simplest-rust-c-ffi-example/"

[dependencies]
futures = "0.3.31"
reqwest = "0.12.15"
tokio = { version = "1.45.0", features = ["full"] }

[build-dependencies]
bindgen = "0.59"
cc = "1"
